force-app/main/default/objects/Clients__c/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <label>Client Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New, Active, On Hold, Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>