force-app/main/default/objects/Clients__c/fields/GST_Number__c.field-meta.xml
<CustomField>
    <fullName>GST_Number__c</fullName>
    <label>GST Number</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>