force-app/main/default/objects/Clients__c/fields/PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number__c</fullName>
    <label>PAN Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>